# LISHE-pass

./: .clang-format  .gitignore  CMakeLists.txt  Lishe.cpp  Lishe.h  README.md  run-clang-format.py  run_tests.sh
tests/: 01_basic_hoist.c  01_basic_hoist_after.ll  01_basic_hoist_before.ll  02_guarded_loop.c  02_guarded_loop_after.ll  02_guarded_loop_before.ll  03_alias_write_blocker.c  03_alias_write_blocker_after.ll  03_alias_write_blocker_before.ll  04_pointer_varies.c  04_pointer_varies_after.ll  04_pointer_varies_before.ll  05_volatile_store.c  05_volatile_store_after.ll  05_volatile_store_before.ll  06_redundant_same_store.c  06_redundant_same_store_after.ll  06_redundant_same_store_before.ll
